kube-ops-view/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-ops-view

spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app: kube-ops-view
